k8s/infrastructure/overlays/prod/patches/ha.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: private-nat-b
spec:
  forProvider:
    region: us-east-1
    routeTableIdSelector:
      matchLabels:
        app.kubernetes.io/name: rtb-private-b
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdSelector:
      matchLabels:
        app.kubernetes.io/name: nat
        zone: b
  providerConfigRef:
    name: default
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: private-nat-c
spec:
  forProvider:
    region: us-east-1
    routeTableIdSelector:
      matchLabels:
        app.kubernetes.io/name: rtb-private-c
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdSelector:
      matchLabels:
        app.kubernetes.io/name: nat
        zone: c
  providerConfigRef:
    name: default
